<resources>
    <string name="app_name">Blue Phoenix</string>
    <string name="blue">BLUE</string>
    <string name="phoenix">PHOENIX</string>
    <string name="welcome">Welcome</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="registration_title">Registration</string>
    <string name="sign_in_to_continue_using_the_app">Sign in to continue using the app</string>
    <string name="registration">Create your account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="loginBtn">Login</string>
    <string name="or_continue_with">or continue with</string>
    <string name="password">Password</string>
    <string name="email_username">Email/Username</string>
    <string name="password_field">Password</string>
    <string name="email_username_field">Email/Username</string>
    <string name="confirm_password_field">Confirm Password</string>
    <string name="display_name">Hello, </string>
    <string name="hope_you_are_doing_well">Hope you are doing well!</string>
    <string name="continue_previous_session">continue previous session</string>
    <string name="illustrated_codals">Illustrated Codals</string>
    <string name="www_bluephoenix_com">www.bluephoenixreview.com</string>
    <string name="blue_phoenix_illustrated_reviewers">Blue Phoenix Illustrated Reviewers</string>
    <string name="reviewer_title_remedial_law">Remedial Law</string>
    <string name="reviewer_main_title">Illustrated Codals</string>
    <string name="blphx_logo">blphx_logo</string>
    <string name="rem_general_principles">GENERAL PRINCIPLES</string>
    <string name="rem_jurisdiction">JURISDICTION</string>
    <string name="rem_civil_procedure">CIVIL PROCEDURE</string>
    <string name="rem_criminal_procedure">CRIMINAL PROCEDURE</string>
    <string name="rem_evidence">EVIDENCE</string>
    <string name="rem_special_proceedings">SPECIAL PROCEEDINGS</string>
    <string name="default_web_client_id">855429425240-o0iqmtqdebogudh3r881sj5f47988t7g.apps.googleusercontent.com</string>
    <string name="logo">logo</string>
    <string name="rem_content_rules_of_civil_procedure">Rules of civil procedure</string>
    <string name="rem_content_provisional_remedies">provisional remedies</string>
    <string name="rem_content_special_civil_actions">special civil actions</string>
    <string name="peer_review_and_discussion">Peer Review and Discussion</string>
    <string name="forum_name_date_separator"> • </string>
    <string name="nav_header_title">User Name Here</string>
    <string name="nav_header_subtitle">user.email@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_logout">Log out</string>
</resources>