<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bp_logo2"
            android:layout_width="120dp"
            android:layout_height="99dp"
            android:layout_marginTop="-70dp"
            app:srcCompat="@drawable/bp_logo" />

        <TextView
            android:id="@+id/welcome_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textColor="@color/bp_bg"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/signin_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/sign_in_to_continue_using_the_app"
            android:textAlignment="center"
            android:textColor="@color/bp_bg"
            android:textSize="16sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="15dp"
                    android:text="@string/login"
                    android:textColor="@color/bp_bg" />

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/bp_name_light_blue"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="15dp"
                    android:text="@string/register"
                    android:textColor="@color/white" />
            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="350dp"
            android:layout_height="205dp">

            <!-- Updated TextInputLayout with correct cursor color implementation -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/email_username_field"
                android:textColorHint="@color/bp_bg"
                app:boxStrokeColor="@color/bp_bg"
                app:hintTextColor="@color/bp_bg"
                app:startIconContentDescription="Email Icon"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/bp_bg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins_light"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/cursor_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Updated Password field with correct cursor color implementation -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="124dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/confirm_password_field"
                android:textColorHint="@color/bp_bg"
                app:boxStrokeColor="@color/bp_bg"
                app:endIconContentDescription="Toggle password visibility"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/bp_bg"
                app:hintTextColor="@color/bp_bg"
                app:startIconContentDescription="Password Icon"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/bp_bg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins_light"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/cursor_color" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Updated Password field with correct cursor color implementation -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/password_field"
                android:textColorHint="@color/bp_bg"
                app:boxStrokeColor="@color/bp_bg"
                app:endIconContentDescription="Toggle password visibility"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/bp_bg"
                app:hintTextColor="@color/bp_bg"
                app:startIconContentDescription="Password Icon"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/bp_bg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins_light"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/cursor_color" />
            </com.google.android.material.textfield.TextInputLayout>


        </FrameLayout>


        <Button
            android:id="@+id/reg_Btn"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bp_name_light_blue"
            android:fontFamily="@font/poppins_bold"
            android:padding="12dp"
            android:text="@string/register"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/or_continue_with"
            android:textAlignment="center"
            android:textColor="@color/bp_bg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/gmail_ic"
                android:layout_width="37dp"
                android:layout_height="39dp"
                android:layout_weight="0"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_gmail" />

            <ImageView
                android:id="@+id/fb_ic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/ic_facebook" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>