<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bp_bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bp_logo"
        android:layout_width="169dp"
        android:layout_height="227dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17"
        app:srcCompat="@drawable/bp_logo" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bp_head_name_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_semibold"
                android:paddingEnd="2dp"
                android:text="@string/blue"
                android:textColor="@color/bp_name_light_blue"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/bp_head_name_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_semibold"
                android:paddingStart="2dp"
                android:text="@string/phoenix"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="315dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.994">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <View
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@color/bp_bg" />

            <TextView
                android:id="@+id/welcome_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_extrabold"
                android:gravity="center"
                android:letterSpacing=".050"
                android:shadowColor="@color/bp_name_light_blue"
                android:shadowRadius="10"
                android:text="@string/welcome"
                android:textColor="@color/bp_name_light_blue"
                android:textSize="34sp"
                android:typeface="monospace" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/dotsIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:dotsColor="@color/gray"
                app:dotsSize="12dp"
                app:selectedDotColor="@color/bp_bg" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/getStartedBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/poppins_extrabold"
                android:text="Get Started "
                android:textColor="@color/bp_bg"
                app:cornerRadius="8dp"
                app:strokeColor="@color/bp_bg"
                app:strokeWidth="2dp" />
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
