<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewerContentActivity"
    android:background="@color/bp_bg">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/logOut_ic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                app:startIconContentDescription="Email Icon"
                app:startIconDrawable="@drawable/ic_out"
                app:startIconTint="@color/bp_name_light_blue" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/bp_logo"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutEmail"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColorHint="@color/bp_bg"
                    app:boxStrokeColor="@color/bp_bg"
                    app:hintTextColor="@color/bp_bg"
                    app:startIconContentDescription="Email Icon"
                    app:startIconDrawable="@drawable/ic_book"
                    app:startIconTint="@color/bp_bg" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/user_display_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/poppins_extrabold"
                        android:maxLines="1"
                        android:text="@string/reviewer_main_title"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/button_round_corners"
            android:textColor="@color/bp_bg"
            android:fontFamily="@font/poppins_bold"
            android:textSize="11sp"
            android:text="@string/continue_previous_session"
            android:layout_gravity="center_horizontal"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_background"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/i_codals"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/arrow_back_ic"
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:textColorHint="@color/bp_bg"
                        app:boxStrokeColor="@color/bp_bg"
                        app:hintTextColor="@color/bp_bg"
                        app:startIconContentDescription="Email Icon"
                        app:startIconDrawable="@drawable/ic_arrow_back"
                        app:startIconTint="@color/bp_bg">
                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/codal_title_1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/poppins_bold"
                            android:gravity="center_vertical"
                            android:text="Civil Procedure"
                            android:textColor="@color/bp_bg"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/codal_title_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="184dp"
                            android:layout_marginBottom="0dp"
                            android:fontFamily="@font/poppins_light"
                            android:text="@string/reviewer_title_remedial_law"
                            android:textColor="@color/bp_bg"
                            android:textSize="12sp" />

                    </RelativeLayout>
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <com.l4digital.fastscroll.FastScrollRecyclerView
                    android:id="@+id/content_recycler_view_reviewer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="15dp"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    tools:listitem="@layout/item_content_text"/>
<!--                    app:fastScrollThumbColor="@color/bp_name_light_blue"-->
<!--                    app:fastScrollTrackColor="@android:color/transparent"-->
<!--                    app:fastScrollPopupBgColor="@color/bp_name_light_blue"-->
<!--                    app:fastScrollPopupTextColor="@color/white"-->
<!--                    app:fastScrollPopupTextSize="14sp"-->
<!--                    app:hideScrollbar="false"-->
<!--                    app:showBubble="true"-->
<!--                    app:showBubbleAlways="false"-->
<!--                    app:showTrack="false"-->
<!--                    app:bubbleSize="normal"-->
<!--                    app:fastScrollThumbWidth="8dp" -->

                </FrameLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>